@@ -66,6 +66,8 @@ Version 1.11.0-svn:
      (feature/bug #3797)
    * Map editor now displays invisible overlay terrains on main map.
    * Re-fogging does not occur in the middle of the player's turn.
+   * Fixed provided saved game filenames being ignored when requesting to
+     save a MP game due to a network or OOS error (bug #19562).
 
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my
