@@ -101,6 +101,8 @@ Version 1.11.0-svn:
      display normally in the add-ons management dialogs (e.g. without
      colors)
    * Re-fogging does not occur in the middle of the player's turn.
+   * Fixed provided saved game filenames being ignored when requesting to
+     save a MP game due to a network or OOS error (bug #19562)
  * Whiteboard
    * Fixed bug #19369: Using planning mode can cause losing ability to move my units
    * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
